apps/human-capital/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: human-capital
  labels:
    app: human-capital
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: human-capital
